remove absolute paths from the jade files

--- a/views/faq/1.jade
+++ b/views/faq/1.jade
@@ -3,4 +3,4 @@
       .spacer-80
    .row
       .col-sm-12.text-center
-         img.img-responsive(style='width: 636px;', src='/img/faq/main_mast.svg')
+         img.img-responsive(style='width: 636px;', src='img/faq/main_mast.svg')
