--- a/views/news/articles.jade
+++ b/views/news/articles.jade
@@ -1,4 +1,4 @@
-.section(style='background-color: #DC5473; background-image: url(/img/news/news_background.png); background-repeat:no-repeat; background-position: center center;')
+.section(style='background-color: #DC5473; background-image: url(img/news/news_background.png); background-repeat:no-repeat; background-position: center center;')
 
   .row
     .spacer-40
@@ -36,7 +36,7 @@
             .pull-right(style='color: #69ACB7') 8 SEP 2014
 
           .row
-            img.img-responsive(style='width: 507px;', src='/img/news/article_gameonmalaysia.jpg')
+            img.img-responsive(style='width: 507px;', src='img/news/article_gameonmalaysia.jpg')
 
           .row
             .spacer-10
@@ -47,7 +47,7 @@
               div.pull-right(style='background-color: #F1826B; color: white; padding: 5px; padding-left: 15px; padding-right: 15px; font-family: \'Oswald Regular\', sans-serif;') READ
 
           //.row.text-center.hidden-xs
-          //  img(style='height: 167px; margin-top: 10%', src='/img/news/article_dude.svg')
+          //  img(style='height: 167px; margin-top: 10%', src='img/news/article_dude.svg')
           .row.visible-xs
             .spacer-20
 
@@ -55,7 +55,7 @@
 
           // News Items Header
           .row.text-center(style='max-width: 305px;')
-            img(style='width: 107px; margin:0 auto;', src='/img/news/canvas_frame_top.svg')
+            img(style='width: 107px; margin:0 auto;', src='img/news/canvas_frame_top.svg')
           .row(style='max-width: 305px; background-color: #78AA42')
             h4(style='padding-left: 20px; font-family: \'Avenir\', sans-serif; font-weight: 800; font-size: 16px; color: #28622F; padding-top: 5px; padding-bottom: 5px;') MORE NEWS & ARTICLES
 
@@ -68,7 +68,7 @@
 
           // News Footer
           .row(style='max-width: 346px;')
-            img.img-responsive(src='/img/news/canvas_frame_bottom.svg')
+            img.img-responsive(src='img/news/canvas_frame_bottom.svg')
 
       .row
         .spacer-40
@@ -81,11 +81,11 @@
               .spacer-10
             .row
               .col-sm-5.hidden-xs.text-right
-                img(style='height:7px; margin-top: 5px;', src='/img/news/arrow_down.svg')
+                img(style='height:7px; margin-top: 5px;', src='img/news/arrow_down.svg')
               .col-sm-2.text-center
                 h3(style='color: #FDFAE4; margin-top: 0px; font-family: "Oswald Bold"; font-size: 17;') ARCHIVE
               .col-sm-5.hidden-xs.text-left
-                img(style='height:7px; margin-top: 5px;', src='/img/news/arrow_down.svg')
+                img(style='height:7px; margin-top: 5px;', src='img/news/arrow_down.svg')
 
       .row
         .spacer-40
@@ -108,7 +108,7 @@
 
         // The Book
         .col-sm-8.col-sm-offset-1#book-2014
-          div(style="width:100%; height: 300;background-image: url(\"/img/news/newsarchivebook.svg\");background-repeat:no-repeat; background-position: center center;")
+          div(style="width:100%; height: 300;background-image: url(\"img/news/newsarchivebook.svg\");background-repeat:no-repeat; background-position: center center;")
             .row.hidden-sm
               .spacer-40
               .spacer-10
@@ -155,7 +155,7 @@
           //    li#news-next-button.arrow-right
 
         .col-sm-8.col-sm-offset-1#book-2013
-          div(style="width:100%; height: 300;background-image: url(\"/img/news/newsarchivebook.svg\");background-repeat:no-repeat; background-position: center center;")
+          div(style="width:100%; height: 300;background-image: url(\"img/news/newsarchivebook.svg\");background-repeat:no-repeat; background-position: center center;")
             .row.hidden-sm
               .spacer-40
               .spacer-10
@@ -215,7 +215,7 @@
           //    li#news-next-button.arrow-right
 
         .col-sm-8.col-sm-offset-1#book-earlier
-          div(style="width:100%; height: 300;background-image: url(\"/img/news/newsarchivebook.svg\");background-repeat:no-repeat; background-position: center center;")
+          div(style="width:100%; height: 300;background-image: url(\"img/news/newsarchivebook.svg\");background-repeat:no-repeat; background-position: center center;")
             .row.hidden-sm
               .spacer-40
               .spacer-10
