--- a/views/news/mast.jade
+++ b/views/news/mast.jade
@@ -3,18 +3,18 @@
   .row
     .spacer-80
     .col-sm-12.text-center
-      img.img-responsive(src='/img/about/about_kites.png')
+      img.img-responsive(src='img/about/about_kites.png')
 
   .row
     .col-md-7.text-right.hidden-sm.hidden-xs
-      img.img-responsive(style='height:360px;', src='/img/news/mast_factory.svg')
+      img.img-responsive(style='height:360px;', src='img/news/mast_factory.svg')
     .col-sm-12.visible-sm.visible-xs
-      img.img-responsive(style='max-height:360px;', src='/img/news/mast_factory.svg')
+      img.img-responsive(style='max-height:360px;', src='img/news/mast_factory.svg')
       .spacer-40
 
     .col-md-4.hidden-sm.hidden-xs
       .row.text-center
-        img(style='height:91px;', src='/img/common/emblem.svg')
+        img(style='height:91px;', src='img/common/emblem.svg')
         .spacer-20
       .row.text-center
         h1.mast-title(style='text-shadow: 4px 4px #DC5473;') NEWS
@@ -24,7 +24,7 @@
 
     .col-sm-12.visible-sm.visible-xs
       .row.text-center
-        img(style='height:91px;', src='/img/common/emblem.svg')
+        img(style='height:91px;', src='img/common/emblem.svg')
         .spacer-20
       .row.text-center
         h1.mast-title(style='text-shadow: 4px 4px #DC5473;') NEWS
