--- a/views/faq/4.jade
+++ b/views/faq/4.jade
@@ -2,14 +2,14 @@
 
    // Lights
    .row.text-center.hidden-xs.hidden-sm
-      img(style='width: 900px;', src='/img/faq/faq_room_lights.svg')
+      img(style='width: 900px;', src='img/faq/faq_room_lights.svg')
    .row.text-center.visible-xs.visible-sm
-      img.img-responsive(src='/img/faq/faq_room_lights_mobile.png')
+      img.img-responsive(src='img/faq/faq_room_lights_mobile.png')
 
    // Room
    .row.hidden-xs.hidden-sm(style='height: 260px;')
-      img(style='height: 283px; position: absolute; margin: 0 auto; left: 0; right: 0;', src='/img/faq/faq_room_comic.svg')
+      img(style='height: 283px; position: absolute; margin: 0 auto; left: 0; right: 0;', src='img/faq/faq_room_comic.svg')
    .row.visible-sm(style='height: 248px; margin-right: 10px; margin-left: 10px;')
-      img.img-responsive(style='height: 283px;', src='/img/faq/faq_room_comic_mobile.svg')
+      img.img-responsive(style='height: 283px;', src='img/faq/faq_room_comic_mobile.svg')
    .row.visible-xs(style='height: 235px; margin-right: 10px; margin-left: 10px;')
-      img.img-responsive(style='height: 283px;', src='/img/faq/faq_room_comic_mobile.svg')
+      img.img-responsive(style='height: 283px;', src='img/faq/faq_room_comic_mobile.svg')
