--- a/views/news/videos.jade
+++ b/views/news/videos.jade
@@ -5,9 +5,9 @@
 
   // The ladders
   .row.text-center(style='position: absolute; left: 0; right: 0; bottom: -43px; z-index: 0')
-    img.img-responsive(style='width: 800px; padding-left: 40px; padding-right: 40px;', src='/img/news/video-ladder.svg')
+    img.img-responsive(style='width: 800px; padding-left: 40px; padding-right: 40px;', src='img/news/video-ladder.svg')
   .row.visible-xs.text-center(style='position: absolute; left: 0; right: 0; top: 290px; z-index: 0')
-    img.img-responsive(style='width: 800px; padding-left: 40px; padding-right: 40px;', src='/img/news/video-ladder.svg')
+    img.img-responsive(style='width: 800px; padding-left: 40px; padding-right: 40px;', src='img/news/video-ladder.svg')
 
   // The Stage
   .row#stage(style='position: relative; height: 760px; z-index: 2; padding-left: 15px; padding-right: 15px;')
@@ -16,7 +16,7 @@
         .div(style='border: 10px solid #FFE6B0; border-radius:20px; background-color: #FFE6B0; max-width: 860px; box-shadow: 0px 8px #754C24; margin: 0 auto;')
           .div#stagevideo(style='border: 15px solid #333333; border-radius:10px; background-color: #333333')
     .row.hidden-xs.text-center(style='position: absolute; left: 0; right: 0; top: 0;')
-      img(style='width:1000px;', src='/img/news/video-mast.svg')
+      img(style='width:1000px;', src='img/news/video-mast.svg')
 
 
   // the plate below the stage
